DTO 리팩토링 (#6)
* style: McpRequest와 McpResponse의 파일명을 JsonRpcRequest와 JsonRpcResponse로 변경

* feat: Tool은 ToolInterface를 상속받아 사용하도록 구현

* feat: ToolInformation을 통해서 현재 ToolList를 반환하는 기능 추가

* refactor: method에 따른 스위칭을 Controller 레벨에서 하도록 변경

* refactor: JsonTypeInfo를 통한 타입 캐스팅 기능 추가

* refactor: 테스트 코드 내에 수정된 JsonRpcRequest를 처리하도록 변경

* refactor: JsonRpcResponse를 각 상황에 맞는 하위 타입으로 사용할 수 있도록 변경

McpResponse를 베이스 클래스로 두고, 하위에 init, tools/list, tools/call, error 클래스를 추가
Method 타입을 삭제

* style: CustomException을 McpException으로 클래스 명 변경

* refactor: 테스트 코드를 기존의 리팩토링된 코드에 맞춰서 수정

* feat: GeminiApiRequest를 통해 구조화 된 requestBody 생성기능 추가

* feat: GeminiApiResponse를 통해 구조화된 응답 파싱 기능 추가

* fix: Params에 Getter가 없어 역직렬화가 안되는 문제 수정

* refactor: assert대신 orElseThrow를 통한 null 타입 체크기능 추가