@@ -2,10 +2,22 @@ package com.qlmcp.backend.tool;
 
 import com.qlmcp.backend.config.AiProperties;
 import com.qlmcp.backend.config.ToolMeta;
+import com.qlmcp.backend.dto.GeminiApiRequest;
+import com.qlmcp.backend.dto.GeminiApiRequest.Content;
+import com.qlmcp.backend.dto.GeminiApiRequest.GenerationConfig;
+import com.qlmcp.backend.dto.GeminiApiRequest.GenerationConfig.ThinkingConfig;
+import com.qlmcp.backend.dto.GeminiApiRequest.SystemInstruction;
+import com.qlmcp.backend.dto.GeminiApiRequest.Tool;
+import com.qlmcp.backend.dto.GeminiApiRequest.Tool.FunctionDeclaration;
+import com.qlmcp.backend.dto.GeminiApiResponse;
+import com.qlmcp.backend.dto.GeminiApiResponse.Candidate.Content.Part;
+import com.qlmcp.backend.dto.GeminiApiResponse.Candidate.Content.TextPart;
+import com.qlmcp.backend.exception.ErrorCode;
+import com.qlmcp.backend.exception.McpException;
 import java.net.URI;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
@@ -29,65 +41,47 @@ import org.springframework.web.client.RestClient;
 )
 @Component
 @RequiredArgsConstructor
-public class QueryTool {
+public class QueryTool implements ToolInterface {
 
     private final AiProperties aiProperties;
-    private RestClient restClient = RestClient.create();
+    private final RestClient restClient = RestClient.create();
 
-    public Map<String, Object> call(Map<?, ?> arguments) {
-        return Map.of(
-            "content", List.of(
-                Map.of(
-                    "type", "text",
-                    "text", sendChat((String) arguments.get("question"))
+    @Override
+    public List<Object> call(Object id, Map<?, ?> arguments) {
+        return List.of(
+            Map.of(
+                "type", "text",
+                "text", sendChat(
+                    new Content("user", (String) arguments.get("question"))
                 )
-            ),
-            "isError", false
+            )
         );
     }
 
-    private String sendChat(String message) {
+    private String sendChat(Content content) {
         String apiUrl = aiProperties.getBaseUrl() + "/" + aiProperties.getModel() + ":"
             + aiProperties.getType();
 
-        Map<String, Object> requestBody = new HashMap<>();
-        requestBody.put(
-            "system_instruction",
-            Map.of(
-                "parts",
-                List.of(Map.of("text", "You are a ql mcp assistant."))
+        GeminiApiRequest requestBody = GeminiApiRequest
+            .builder()
+            .systemInstruction(
+                new SystemInstruction("You are a ql mcp assistant.")
             )
-        );
-
-        requestBody.put(
-            "contents",
-            List.of(
-                Map.of(
-                    "role", "user",
-                    "parts", List.of(Map.of("text", message))
+            .contents(
+                List.of(content)
+            )
+            .generationConfig(
+                new GenerationConfig(
+                    new ThinkingConfig(0)
                 )
             )
-        );
-
-        requestBody.put(
-            "generationConfig",
-            Map.of(
-                "thinkingConfig",
-                Map.of("thinkingBudget", 0)
-            )
-        );
-
-        requestBody.put(
-            "tools",
-            List.of(
-                Map.of(
-                    "functionDeclarations",
-                    List.of(
-                        Map.of(
-                            "name", "get_nowcast_observation",
-                            "description",
+            .tools(
+                List.of(
+                    new Tool(
+                        new FunctionDeclaration(
+                            "get_nowcast_observation",
                             "특정 위경도의 날씨 정보를 가져옵니다. Args: lon (float): 경도 값 lat (float): 위도 값",
-                            "parameters", Map.of(
+                            Map.of(
                                 "type", "object",
                                 "properties", Map.of(
                                     "lon", Map.of(
@@ -105,24 +99,27 @@ public class QueryTool {
                     )
                 )
             )
+            .build();
+
+        GeminiApiResponse response = Optional.ofNullable(
+            restClient.post()
+                .uri(URI.create(apiUrl))
+                .header("x-goog-api-key", aiProperties.getKey())
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(requestBody)
+                .retrieve()
+                .body(GeminiApiResponse.class)
+        ).orElseThrow(
+            () -> new McpException(1, ErrorCode.TOOL_EXECUTION_ERROR)
         );
 
-        Map response = restClient.post()
-            .uri(URI.create(apiUrl))
-            .header("x-goog-api-key", aiProperties.getKey())
-            .contentType(MediaType.APPLICATION_JSON)
-            .body(requestBody)
-            .retrieve()
-            .body(Map.class);
+        List<Part> parts = response.getCandidates().getFirst().getContent().getParts();
 
-        List<Map<String, Object>> candidates = (List<Map<String, Object>>) response.get(
-            "candidates");
-        if (candidates.size() == 1) {
-            Map<String, Object> candidate = candidates.get(0);
+        Part part = parts.getFirst();
+
+        if (part instanceof TextPart) {
+            return ((TextPart) part).getText();
         }
-
-        Map<String, Object> content = (Map<String, Object>) candidates.get(0).get("content");
-        List<Map<String, Object>> parts = (List<Map<String, Object>>) content.get("parts");
-        return (String) parts.get(0).get("text");
+        return "";
     }
 }
